# mfja_3rd_floor_gz

./: .gitignore  CMakeLists.txt  README.md  flake.nix  multi_robot_usage_guide.tex  package.xml  room315_shuttle_rail_report_ar.html  runbook.html
CSV/: A23.csv  A34E.csv
config/: robots.yaml
launch/: mfja_3rdf.launch.py  mfja_3rdf_kuka.launch.py
mfja_3rd_floor_bringup/: CMakeLists.txt  package.xml
mfja_3rd_floor_bringup/launch/: full_floor.launch.py  mfja_3rdf.launch.py  room_315_only.launch.py
mfja_3rd_floor_description/: CMakeLists.txt  THIRD_PARTY.md  package.xml
mfja_3rd_floor_description/models/carter_droit/: model.sdf
mfja_3rd_floor_description/models/cell_path_right/: model.sdf
mfja_3rd_floor_description/models/lab_chair/: model.config
mfja_3rd_floor_description/models/lab_table/: model.config  model.sdf
mfja_3rd_floor_description/models/mfja_3rd_floor/: mfja_3rd_floor.sdf  model.config
mfja_3rd_floor_description/models/mfja_3rd_floor/meshes/: mfja_3rd_floor_v4.stl
mfja_3rd_floor_description/models/rail_switch_3pos_droit/: model.sdf
mfja_3rd_floor_description/models/rail_switch_3pos_droit_static_black/: model.sdf
mfja_3rd_floor_description/models/room315_shuttle/: model.config  model.sdf
mfja_3rd_floor_description/models/room315_shuttle/meshes/: shuttle.STL
mfja_3rd_floor_description/worlds/: mfja_3rd_floor.world  room_315_only.world
mfja_3rd_floor_gz/: CMakeLists.txt  README.md  package.xml
mfja_3rd_floor_gz/launch/: full_floor.launch.py  mfja_3rdf.launch.py  mfja_3rdf_kuka.launch.py  room_315_only.launch.py
mfja_rail_interfaces/: CMakeLists.txt  package.xml
mfja_rail_interfaces/msg/: SensorReading.msg
mfja_rail_interfaces/srv/: AddShuttle.srv
mfja_robot_control_config/: CMakeLists.txt  package.xml
mfja_robot_control_config/config/: mfja_default.gui.config
mfja_robot_control_config/config/room_315_kinematics/: README.md  rail_devices_left.yaml  rail_devices_right.yaml  rail_network.yaml  segment_summary.yaml  validation_report.yaml
mfja_robot_control_config/config/room_315_kinematics/normalized_segments/: A12E.csv  A12I.csv  A14.csv  A1G.csv  A1S.csv  A23.csv  A2G.csv  A2S.csv  A34E.csv  A34I.csv  A3G.csv  A3S.csv  A4G.csv  A4S.csv
mfja_robot_control_config/config/room_315_kinematics/raw_segments/: A12E.csv  A12I.csv  A14.csv  A34I.csv
mfja_robot_control_config/launch/: multi_robot_sim.launch.py  room_315_dual_kinematic_shuttles.launch.py
mfja_robot_control_config/scripts/: conveyor_loop_mode_controller.py  multi_robot_sync_demo.py  room_315_csv_preprocessor.py  room_315_device_position_tool.py  room_315_devices_validator.py  room_315_kinematic_shuttle.py  room_315_kinematic_shuttle_node.py  room_315_report_figures.py  room_315_segment_plot.py  watch_sensor_feedback.py
mfja_room_315_bringup/: CMakeLists.txt  package.xml
mfja_room_315_bringup/launch/: room_315_only.launch.py
models/carter_gauche/: model.sdf
models/kuka_kr6r900sixx/: model.sdf
models/lab_chair/: model.sdf
models/mfja_3rd_floor/: mfja_3rd_floor.sdf
models/mfja_3rd_floor/meshes/: mfja_3rd_floor_v3.stl
models/staubli_tx2_60l/: model.sdf
models/tiago/: model.sdf
models/yaskawa_hc10/: model.sdf
models/yaskawa_hc10dt/: model.sdf
scripts/: multi_robot_sync_demo.py
worlds/: mfja_3rd_floor.world
