<?xml version="1.0"?>
<package format="3">
  <name>mfja_3rd_floor_bringup</name>
  <version>1.0.0</version>
  <description>Launch entry points for the full MFJA third-floor Gazebo simulation.</description>
  <maintainer email="olivier.stasse@laas.fr">Olivier Stasse</maintainer>
  <maintainer email="ali.ibrahim@etud.univ-evry.fr">Ali IBRAHIM</maintainer>
  <license>Apache License 2.0</license>
  <author email="olivier.stasse@laas.fr">Olivier Stasse</author>
  <author email="ali.ibrahim@etud.univ-evry.fr">Ali IBRAHIM</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>mfja_3rd_floor_description</exec_depend>
  <exec_depend>mfja_robot_control_config</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
