<?xml version="1.0"?>
<package format="3">
  <name>mfja_3rd_floor_gz</name>
  <version>1.0.0</version>
  <description>Umbrella and compatibility package for the MFJA 3rd floor Gazebo meta-repository.</description>
  <maintainer email="olivier.stasse@laas.fr">Olivier Stasse</maintainer>
  <maintainer email="diane.bury@utoulouse.fr">Diane BURY</maintainer>
  <maintainer email="ali.ibrahim@etud.univ-evry.fr">Ali IBRAHIM</maintainer>
  <license>Apache License 2.0</license>
  <author email="ali.ibrahim@etud.univ-evry.fr">Ali IBRAHIM</author>
  <author email="olivier.stasse@laas.fr">Olivier Stasse</author>
  <author email="diane.bury@utoulouse.fr">Diane BURY</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>mfja_3rd_floor_bringup</exec_depend>
  <exec_depend>mfja_room_315_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
