<?xml version="1.0"?>
<package format="3">
  <name>mfja_room_315_bringup</name>
  <version>1.0.0</version>
  <description>Launch entry points for the lightweight room-315-only Gazebo simulation.</description>
  <maintainer email="olivier.stasse@laas.fr">Olivier Stasse</maintainer>
  <license>Apache License 2.0</license>
  <author email="olivier.stasse@laas.fr">Olivier Stasse</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>mfja_3rd_floor_description</exec_depend>
  <exec_depend>mfja_robot_control_config</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
